Fix various layout issues
The padding for the main view is now centralized in the
`<SideMenuProvider />` component.

--- a/packages/studio/src/components/Toolbar/index.css
+++ b/packages/studio/src/components/Toolbar/index.css
@@ -1,5 +1,12 @@
 .root {
   justify-content: space-between;
+
+  /*
+   * This should overlay any other navbars.
+   *
+   * Bulma navbars have a z-index of 30.
+   */
+  z-index: 31 !important;
 }
 
 .tag {
